# Iron

./: AGENTS.md  Cargo.toml  README.adoc  README.md  build.rs
.github/workflows/: build.yml  iron_formula.tpl
resources/: org.blueak.iron.desktop
src/: cac.rs  cef_browser.rs  cef_init.rs  command.rs  config.rs  download.rs  find.rs  fuzzy.rs  hints.rs  history.rs  main.rs  noctalia.rs  parallel_download.rs  search.rs  session.rs  settings.rs
