[package]
name = "iron"
version = "0.1.0"
edition = "2024"
description = "A GTK4 keyboard-driven web browser for BlueAK"
license = "MIT"
repository = "https://github.com/Akinus21/Iron"

[dependencies]
adw = { package = "libadwaita", version = "0.9" }
gtk4 = { version = "0.11", features = ["v4_14"] }
webkit6 = "0.6"
gio = "0.22"
glib = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
toml = "0.8"
urlencoding = "2"
rusqlite = { version = "0.34", features = ["bundled"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "sync", "time"] }
futures = "0.3"
